fixed the alignment of nav links

--- a/css/main.css
+++ b/css/main.css
@@ -157,9 +157,13 @@ nav {
 .address p{
   font-size: 0.9rem;
 }
-@media only screen and (max-width: 900px){
+@media only screen and (max-width: 1060px){
   .bottomFooter{
     font-size: 0.7rem;
+  }
+  .nav-link {
+    font-size: 1rem;
+    margin: 0 14px;
   }
 }
 
@@ -216,15 +220,23 @@ nav {
   border-radius: 0;
   width: 250px;
   padding: 15px;
-  margin: 0px 100px 20px 100px;
+  margin: 0px 50px 20px 50px;
   background: transparent;
   border: 2px solid #f4f4f4;
   color: #f4f4f4;
   text-align: center;
   text-indent: 0;
 }
-
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1370px){
+  .c-indicators li {
+    width: 250px;
+    padding: 15px;
+    margin: 0px 10px 20px 10px;
+    background: transparent;
+    border: 2px solid #f4f4f4;
+  }
+}
+@media only screen and (max-width: 1060px) {
   .carousel-caption h2{
     font-size: 1rem;
     height: 200px;
@@ -241,13 +253,13 @@ nav {
     color: #f4f4f4;
     text-align: center;
     text-indent: 0;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     padding: 15px 20px;
     width: 200px;
     height: 5px;
   }
 }
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 480px) {
   .c-indicators li {
     margin: 4px;
     border: 1px solid #f4f4f4;
